// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessIcon renders correctly 1`] = `
<svg
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Success Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M0 0h16v16H0z"
    />
    <path
      d="M8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12zm0 1A7 7 0 1 1 8 1a7 7 0 0 1 0 14zM6.537 9.738l4.242-4.243a.667.667 0 1 1 .943.943l-4.714 4.714a.667.667 0 0 1-.943 0l-2.37-2.37a.667.667 0 0 1 .943-.943l1.899 1.899z"
      fill="#1bab1e"
    />
  </g>
</svg>
`;

exports[`SuccessIcon renders large correctly 1`] = `
<svg
  height="36"
  viewBox="0 0 36 36"
  width="36"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Success Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M0 0h36v36H0z"
    />
    <path
      d="M18 34c8.837 0 16-7.163 16-16S26.837 2 18 2 2 9.163 2 18s7.163 16 16 16zm0 1C8.611 35 1 27.389 1 18S8.611 1 18 1s17 7.611 17 17-7.611 17-17 17zm-2.637-12.818l9.546-9.546a1.5 1.5 0 1 1 2.121 2.121L16.424 25.364a1.5 1.5 0 0 1-2.122 0L8.97 20.032a1.5 1.5 0 1 1 2.121-2.122l4.272 4.272z"
      fill="#1bab1e"
    />
  </g>
</svg>
`;

exports[`SuccessIcon renders regular correctly 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Success Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M0 0h24v24H0z"
    />
    <path
      d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm-1.758-8.343l6.364-6.364a1 1 0 0 1 1.414 1.414l-7.071 7.071a1 1 0 0 1-1.414 0L5.98 13.223a1 1 0 0 1 1.414-1.414l2.848 2.848z"
      fill="#1bab1e"
    />
  </g>
</svg>
`;
